Fixed Bugs on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,16 @@ button,
     font-size: 2.7rem;
     height: 5rem;
     width: 5rem;
-    border-radius: 4rem; }
+    border-radius: 50%; }
+    input[type="submit"].round i,
+    input[type="reset"].round i,
+    input[type="button"].round i,
+    button.round i,
+    .button.round i {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
   input[type="submit"].smallround,
   input[type="reset"].smallround,
   input[type="button"].smallround,
@@ -131,7 +140,17 @@ button,
     font-size: 2rem;
     height: 3rem;
     width: 3rem;
-    border-radius: 4rem; }
+    border-radius: 100%;
+    padding: 0 0; }
+    input[type="submit"].smallround i,
+    input[type="reset"].smallround i,
+    input[type="button"].smallround i,
+    button.smallround i,
+    .button.smallround i {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
   input[type="submit"].small,
   input[type="reset"].small,
   input[type="button"].small,
@@ -209,8 +228,8 @@ textarea {
 @media screen and (max-width: 736px) {
   .button.round {
     font-size: 1.8em;
-    height: 3.2rem;
-    width: 3.2rem;
+    height: 4.8rem;
+    width: 4.8rem;
     padding: 0px; }
     .button.round i {
       font-size: 1.1em; } }
@@ -289,11 +308,11 @@ textarea {
     overflow-y: auto; }
     .ControlsContainer .Move {
       padding-top: 0;
-      margin: 20px 0; }
+      margin: 40px 0; }
     .ControlsContainer .add {
       margin-top: 0px; }
     .ControlsContainer .PauseStop {
-      margin: 20px 0;
+      margin: 30px 0;
       font-size: 1.8em; }
       .ControlsContainer .PauseStop #stop {
         top: 4.8rem;
@@ -418,6 +437,11 @@ h1 {
       width: 50px; }
   .ParameterList .ParaCon .ParameterItem.Unit {
     margin-right: 30px; }
+  .ParameterList .ParaCon .ParameterItem.Dropdown select {
+    padding: 3px 10px;
+    font-size: 2vh;
+    height: 1.6rem;
+    width: 180px; }
   .ParameterList .ParaCon.AddP input {
     width: 200px;
     font-size: 2vh; } }
