--- a/assets/scss/component/_controls.scss
+++ b/assets/scss/component/_controls.scss
@@ -80,7 +80,7 @@
         
         .Move{
             padding-top: 0;
-            margin: 20px 0;
+            margin: 40px 0;
         }
 
         .add{
@@ -88,7 +88,7 @@
         }
         
         .PauseStop{
-            margin: 20px 0;
+            margin: 30px 0;
             font-size: 1.8em;
             
             #stop{
